# firmware-controller

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.githooks/: util.sh
.github/workflows/: rust.yaml
firmware-controller/: Cargo.toml
firmware-controller-macros/: Cargo.toml
firmware-controller-macros/src/: lib.rs
firmware-controller-macros/src/controller/: item_impl.rs  item_struct.rs  mod.rs
firmware-controller/src/: lib.rs
src/: lib.rs
src/controller/: item_impl.rs  item_struct.rs  mod.rs
tests/: integration.rs
